apps/projects/incubator/webservers/nginx-testpage/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-testpage
  name: nginx-testpage
  labels:
    app: nginx-testpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-testpage
  template:
    metadata:
      labels:
        app: nginx-testpage
    spec:
      containers:
       - name: nginx-testpage
         image: nginx
         ports:
          - containerPort: 80
            name: http
         volumeMounts:
          - mountPath: usr/share/nginx/html
            name: nginx-testpage-volume
         resources:
           limits:
             cpu: 1000m
             memory: 1Gi
           requests:
             cpu: 1000m
             memory: 1Gi 
      volumes:
       - name: nginx-testpage-volume
         persistentVolumeClaim:
           claimName: nginx-testpage-claim
