apps/projects/incubator/webservers/nginx-testpage/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-testpage-svc
  namespace: nginx-testpage
spec:
  selector:
    app: nginx-testpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
